# core

./: .gitignore  Cargo.toml  README.md  update_issues.py
core/: Cargo.toml  README.md  build.rs
core/benches/: benchmark_results.html  parser_benchmark.rs  run_bench.sh
core/docs/: GRAMMAR.md
core/examples/: build_with_changes.rs  parser_test.rs  test.ids  test_from_declarations.rs
core/src/: lib.rs  report.rs
core/src/autodoc/: mod.rs
core/src/codelib_gen/: mod.rs  rust.rs
core/src/package/config/: dependency.rs  mod.rs
core/src/schema/idl/: diagnostics.rs  grammar.rs  mod.rs
core/src/schema/ir/: context.rs  diff.rs  mod.rs
core/src/utils/: codemap.rs
core/stdlib/: README.md  _test_minimal.ids
core/stdlib/collections/: HashMap.ids  Vec.ids
core/stdlib/http/: Request.ids  Response.ids
core/tests/: dependency_parse_test.rs  diagnostics_test.rs  import_loading_test.rs  minimal_parse_test.rs  mod.rs  no_changes_test.rs  parser_comprehensive.rs  parser_integration.rs  schema_debug_test.rs  schema_loading.rs  stdlib_parse_test.rs  versioning.rs
core/tests/autodoc/: mod.rs
core/tests/cas/: commit_tests.rs  mod.rs  object_store_tests.rs  objects_tests.rs  refs_tests.rs  schema_integration_tests.rs  storage_tests.rs
core/tests/codelib_gen/: mod.rs  rust_gen_tests.rs
core/tests/fixtures/: config_with_deps.idp  use_test.ids
core/tests/package/: mod.rs  schema_loading.rs
core/tests/package_config/: build.rs  compile.rs  mod.rs  parse.rs
core/tests/schema/: mod.rs  simple.ids  unit.rs
core/tests/utils/: codemap.rs  mod.rs
(+46 files in other folders)
