[package]
name = "comline-core"
version = "0.1.0"
edition = "2021"


[dependencies]
# General
eyre = "0.6.8"
snafu = { version = "0.7.5" }
once_cell = "1.17.1"
downcast-rs = "1.2.0"
strum_macros = "0.25.1"
strum = { version = "0.25.0", features = ["derive"] }
glob = "0.3.1"
regex = "1.9.3"
#num-traits = "0.2.16"
#num-derive = "0.4.0"
semver = "1.0.18"

# Serialization
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = "1.0.164"
serde_derive = "1.0.164"

# Lexing, Parsing
rust-sitter = "0.4.5"                                      # Pure Rust incremental parser with tree-sitter
chumsky = "0.9.2"                                          # Kept for potential error recovery helpers
ariadne = { version = "0.3.0", features = ["auto-color"] } # Error reporting

toml_edit = "0.21.0"
handlebars = "4.3.7"

# Hashing
blake3 = "1.4.1"
lz4_flex = "0.11.1"


[build-dependencies]
rust-sitter-tool = "0.4.5" # Build-time grammar compilation

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bench]]
name = "parser_benchmark"
harness = false
